test-dev/netpol-block-rfc1918.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-rfc1918
  namespace: default
spec:
  podSelector:
    matchLabels:
      aienclave/egress: restricted
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
